GPII-3028: Ensure tooltip shown correctly
In case the DPI is changed sometimes the tooltip browser window content
is not shown correctly drawing the rightmost part offscreen.

--- a/src/renderer/qssTooltipPopup/css/main.css
+++ b/src/renderer/qssTooltipPopup/css/main.css
@@ -3,6 +3,9 @@ body {
 }
 
 .fl-qssTooltip {
+    /* DPI related problem with missing border */
+    margin-right: 1px;
+
     flex-direction: column;
 
     position: absolute;
